# RTOS-Sheet-1

./: README.md
fork/: fork.c
mutex/include/: mutex.h
mutex/src/: mutex.c  util.c
mutex/tests/: meson.build  mutex_test.c
sheet1/fork/: fork
sheet1/mutex/: .gdbinit  meson.build
sheet1/mutex/include/: queue.h  util.h
sheet1/mutex/src/: meson.build  queue.c
sheet1/mutex/tests/: queue_test.c
